@@ -1,0 +1,7 @@
+--- TODO --- Describe the important concepts exposed through the scripting API ---
+--- Possible refer just to HWloc documentation pages (uris).
+--- topology, object addressing
+--- cpu set, node set, bitmaps
+--- terms: allowed, online/active
+
+http://www.open-mpi.org/projects/hwloc/doc/v1.2.1/modules.php
